--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "axios": "^1.9.0",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.474.0",
+    "motion": "^12.9.2",
     "next": "14.2.18",
     "pdfjs-dist": "^3.4.120",
     "react": "^18",
